# siteingest

./: .env.example  README.md  main.py  pub.bat  pyproject.toml  startup.bat
ads/: ad.js
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  AppRoutes.jsx  PrivateRoute.jsx
frontend/src/components/: Footer.jsx  Navbar.jsx
frontend/src/pages/: Dashboard.jsx  Home.jsx  Login.jsx  Upload.jsx
frontend/src/utils/: pocketbase.js  urls.js
pb_migrations/: 1752646668_created_sites.js  1752647173_updated_sites.js  1752648337_updated_users.js  1752648374_updated_sites.js  1752648738_updated_sites.js  1752655620_updated_sites.js  1752657276_updated_sites.js  1752657384_updated_sites.js  1752758865_created_impressions.js  1752758977_deleted_impressions.js  1752761144_created_impressions.js  1752761213_updated_impressions.js  1752770511_updated_impressions.js  1753338253_updated_impressions.js  1753338273_updated_impressions.js  1753897301_updated_impressions.js
